@@ -268,7 +268,7 @@ class PersistenceLength(AnalysisBase):
         """
         import matplotlib.pyplot as plt
         if ax is None:
-            ax = plt.gca()
+            fig, ax = plt.subplots()
         ax.plot(self.x, self.results, 'ro', label='Result')
         ax.plot(self.x, self.fit, label='Fit')
         ax.set_xlabel(r'x')
