@@ -111,6 +111,7 @@ Enhancements
   * Improve the distance search in water bridge analysis with capped_distance (PR #2480)
   * Added weights_groupselections option in RMSD for mapping custom weights 
     to groupselections (PR #2610, Issue #2429)
+  * PersistenceLength.plot() now create new axes if current axes not provided (Issue #2590)
 
 Changes
   * Removed `details` from `ClusteringMethod`s (Issue #2575, PR #2620)
